--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <meta name="apple-mobile-web-app-title" content="Raghuvanshi " />
    <link rel="manifest" href="/site.webmanifest" />
-  <styles>
+  <style>
 
             /* General Reset */
         * {
