--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -19,12 +19,12 @@
     <aside id="sidebar" class="fixed inset-y-0 left-0 z-30 w-64 bg-blue-900 text-white transform -translate-x-full md:translate-x-0 transition-all duration-300 ease-in-out md:relative shadow-xl">
       <div class="p-6 text-2xl font-bold">Admin Panel</div>
       <nav class="flex flex-col gap-2 px-4">
-       <a href="#" class="px-4 py-2 rounded hover:bg-blue-800 transition">Dashboard</a>
-        <a href="#" class="px-4 py-2 rounded hover:bg-blue-800 transition">Bookings </a>
-        <a href="#" class="px-4 py-2 rounded hover:bg-blue-800 transition">Services Manager</a>
+       <a href="admin-dashboard.html" class="px-4 py-2 rounded hover:bg-blue-800 transition">Dashboard</a>
+        <a href="bookings-dash.html" class="px-4 py-2 rounded hover:bg-blue-800 transition">Bookings </a>
+        <a href="services-dash.html" class="px-4 py-2 rounded hover:bg-blue-800 transition">Services Manager</a>
         <a href="#" class="px-4 py-2 rounded hover:bg-blue-800 transition">Products Manager</a>
-        <a href="#" class="px-4 py-2 rounded hover:bg-blue-800 transition">Users Manager </a>
-        <a href="#" class="px-4 py-2 rounded hover:bg-blue-800 transition">Anaylatics</a>
+        <a href="users-dash.html" class="px-4 py-2 rounded hover:bg-blue-800 transition">Users Manager </a>
+        <a href="analytics.html" class="px-4 py-2 rounded hover:bg-blue-800 transition">Anaylatics</a>
         <button id="logoutBtn" class="px-4 py-2 bg-red-600 rounded hover:bg-red-700 transition text-left">Logout</button>
       </nav>
     </aside>
