--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -22,7 +22,7 @@
        <a href="admin-dashboard.html" class="px-4 py-2 rounded hover:bg-blue-800 transition">Dashboard</a>
         <a href="bookings-dash.html" class="px-4 py-2 rounded hover:bg-blue-800 transition">Bookings </a>
         <a href="services-dash.html" class="px-4 py-2 rounded hover:bg-blue-800 transition">Services Manager</a>
-        <a href="#" class="px-4 py-2 rounded hover:bg-blue-800 transition">Products Manager</a>
+        <a href="products-dash.html" class="px-4 py-2 rounded hover:bg-blue-800 transition">Products Manager</a>
         <a href="users-dash.html" class="px-4 py-2 rounded hover:bg-blue-800 transition">Users Manager </a>
         <a href="analytics.html" class="px-4 py-2 rounded hover:bg-blue-800 transition">Anaylatics</a>
         <button id="logoutBtn" class="px-4 py-2 bg-red-600 rounded hover:bg-red-700 transition text-left">Logout</button>
